--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "mycro": "^0.4.0",
     "mysql": "^2.10.2",
+    "sequelize": "^3.20.0",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
