--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "mycro": "^0.4.0",
+    "mycro-util-policies": "^0.2.0",
     "mysql": "^2.10.2",
     "sequelize": "^3.20.0",
     "socket.io": "^1.4.5"
